Define scroll-padding-top to prevent the fixed header from overlapping
Support for this CSS rule is limited, but given that the issue isn't
too severe, this will do.

--- a/resources/skins.mirage.styles/common.less
+++ b/resources/skins.mirage.styles/common.less
@@ -108,6 +108,10 @@ pre,
 	word-wrap: break-word;
 }
 
+html {
+	scroll-padding-top: @fixed-header-content-height + 0.5rem;
+}
+
 body {
 	background-color: @wmui-color-base80;
 }
